# ForgeX

./: .gitignore  LICENSE  README.md  config.yaml  index.html  install.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
cli/: main.py
core/: __init__.py  config.py  correlation.py  evidence.py  investigation.py  metadata.py  plugin_manager.py  report.py  timeline.py  utils.py
docs/: ARCHITECTURE.md
examples/: README.md
modules/browser/: artifacts.py
modules/disk/: analyze.py  ewf.py  partitions.py  vhd.py
modules/filesystem/: fs.py
modules/ioc/: extractor.py
modules/linux/: artifacts.py
modules/macos/: artifacts.py
modules/malware/: analyzer.py  yara_lite.py
modules/network/: pcap.py  pcapng.py  tls.py
modules/windows/: artifacts.py  evtx_native.py  mft.py  prefetch.py  registry_native.py  usn.py
plugins/: example_plugin.py
profiles/: custom.yaml  exfiltration.yaml  insider_threat.yaml  malware.yaml  persistence.yaml  phishing.yaml  quick.yaml  ransomware.yaml
rules/: example_rule.yar
tests/: test_correlation.py  test_disk_analyze.py  test_evidence.py  test_evtx_native.py  test_ewf.py  test_investigation_report.py  test_ioc.py  test_metadata.py  test_mft.py  test_network_pcap.py  test_partitions.py  test_prefetch.py  test_registry_native.py  test_timeline.py  test_tls_ja3.py  test_usn.py  test_vhd.py  test_yara_lite.py
