[project]
name = "forgex"
version = "0.1.0"
description = "Forgex - Open-source DFIR investigation platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
full = [
    "python-magic>=0.4.27",
    "yara-python>=4.5.0",
    "scapy>=2.5.0",
    "python-registry>=1.3.1",
    "python-evtx>=0.7.4",
    "pefile>=2023.2.7",
    "olefile>=0.47",
    "cryptography>=42.0",
    "Pillow>=10.0",
    "weasyprint>=61.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
]

[project.scripts]
forgex = "cli.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cli*", "core*", "modules*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
